Frameset: anchor with target in another frame does not scroll to target when pressed
Categories
(Core :: DOM: Navigation, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr128 | --- | unaffected |
| firefox133 | --- | unaffected |
| firefox134 | + | verified |
| firefox135 | + | verified |
| firefox136 | --- | verified |
People
(Reporter: bugzilla, Assigned: edgar)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression, webcompat:platform-bug)
Attachments
(2 files, 2 obsolete files)
|
1.68 KB,
application/x-zip-compressed
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
ryanvm
:
approval-mozilla-beta+
pascalc
:
approval-mozilla-release+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:134.0) Gecko/20100101 Firefox/134.0
Steps to reproduce:
I appreciate framesets are well and truly deprecated, but this worked in Firefox 133 so it would appear something has broken it in 134.
A vendor of one of our legacy products supplies a large data dictionary as a frameset. We host it locally on a file share and access it in Firefox via file:///
While it's not sensitive it's not mine to publish so I have attached just the first 2 entries which nevertheless exhibits the faulty behaviour.
DDToc.html (left frame) includes anchor tags with their targets being named fragments in DDMain.htm (right frame), so that clicking <a target="main" href="DDMain.htm#FRAGMENT"> in DDToc.html should scroll to <a name="FRAGMENT"> in DDMain.htm
Note DataDictionary.htm is the container for the frameset. The sample only contains the first 2 entries, but this replicates the issue and so should be sufficient to illustrate the problem.
Actual results:
Clicking the anchor in DDToc.htm does not scroll to the named fragment in DDMain.htm
Expected results:
Until (and including) Firefox 133, clicking the anchor in DDToc.htm scrolled to the name fragment in DDMain.htm
| Reporter | ||
Comment 1•1 year ago
|
||
Comment 2•1 year ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::DOM: Navigation' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 3•1 year ago
|
||
I'm unable to reproduce this failure on Fedora Linux 41 - the scrolling appears to occur in 133, the latest 134 beta, and the latest 135 nightly.
oneofthedamons, would it be possible for you to capture a profile of the failure and attach it here?
| Reporter | ||
Comment 4•1 year ago
|
||
Well this is interesting. I cannot replicate the issue on MacOS (134-beta) but I can running 134-beta on a newly imaged Windows 10 machine. No issue on 133-release. As the Windows 10 profile was brand new, not signed-in with a Mozilla account, I can't see how it's a profile issue.
| Reporter | ||
Comment 5•1 year ago
|
||
Is someone able to test on Windows to see if there's something weird with our environment (which I must admit I'd suspect, although I can't think of what it might be) or if this is a Windows-specific bug?
| Reporter | ||
Comment 6•1 year ago
|
||
Now that I've been shown how to use mozregression on another bug, I can report mozregression indicates the change was in Bug 1879820 with the pushlog URL: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=43332b0febc24bfdab47366e72b376cf7c68e330&tochange=639d61a9a326ce05c6bd095c628841a03b09c7dc
Comment 7•1 year ago
|
||
Thank you for looking into it. Edgar, I'm forwarding this to you. :)
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
Comment 10•1 year ago
|
||
The bug has a release status flag that shows some version of Firefox is affected, thus it will be considered confirmed.
Comment 11•1 year ago
|
||
Set release status flags based on info from the regressing bug 1879820
| Assignee | ||
Comment 12•1 year ago
|
||
Updated•1 year ago
|
| Assignee | ||
Comment 13•1 year ago
|
||
| Assignee | ||
Comment 14•1 year ago
|
||
We set up am AutoJSAPI in OnLinkClickSync for trusted clicks as well after
D201373. This causes link clicks to be blocked by nsDocShell::CheckLoadingPermissions()
if the target frame is cross-origin and resides in the same process. Under fission,
this isn't a problem since the load usually occurs in a different process, except
for file:// URLs.
Updated•1 year ago
|
Comment 17•1 year ago
|
||
Resetting releases in flight to affected and tracking as we already have 2 duplicates indicating web breakage since we shipped 134.
Comment 19•1 year ago
|
||
The bug is marked as tracked for firefox134 (release) and tracked for firefox135 (beta). However, the bug still has low severity.
:hsinyi, could you please increase the severity for this tracked bug? If you disagree with the tracking decision, please talk with the release managers.
For more information, please visit BugBot documentation.
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 20•1 year ago
|
||
Updated•1 year ago
|
Updated•1 year ago
|
Comment 21•1 year ago
|
||
Comment 22•1 year ago
|
||
| bugherder | ||
Comment 23•1 year ago
|
||
The patch landed in nightly and beta is affected.
:edgar, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox135towontfix.
For more information, please visit BugBot documentation.
Comment 25•1 year ago
|
||
Edgar, could you request uplift for the beta and release branches once this has been verified by QA on NIghtly? This is too late for the dot release that we are building today, but I'd love to know our options for the planned dot release next week, thanks!
| Assignee | ||
Comment 26•1 year ago
|
||
Comment on attachment 9444272 [details]
Bug 1934807 - Consider file: URIs as the same domain for the purpose of frame navigation; r?#dom-core
Beta/Release Uplift Approval Request
- User impact if declined/Reason for urgency: Clicking a targeted link to navigate other frame doesn't work in local files
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: 1. Download test pages in Bug 1934807 comment# 1
- Load
DataDictionary.htm - Click link in left frame
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Should be low, we only do special handling for file:// URI explicitly.
- String changes made/needed: None
- Is Android affected?: Yes
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 27•1 year ago
|
||
(I also verified this on latest Nightly)
Updated•1 year ago
|
Comment 28•1 year ago
|
||
Verified fixed using Nightly 136.0a1 (20250114093520) on MacOS 14 and Windows 11.
Updated•1 year ago
|
Updated•1 year ago
|
Comment 31•1 year ago
|
||
Comment on attachment 9444272 [details]
Bug 1934807 - Consider file: URIs as the same domain for the purpose of frame navigation; r?#dom-core
Approved for 135.0b5.
Comment 32•1 year ago
|
||
| uplift | ||
Updated•1 year ago
|
Comment 33•1 year ago
|
||
Verified fixed on 135.0b5 (20250115025558)
Updated•1 year ago
|
Comment 35•1 year ago
|
||
Comment on attachment 9444272 [details]
Bug 1934807 - Consider file: URIs as the same domain for the purpose of frame navigation; r?#dom-core
Approved for our planned 134 dot release, thanks.
Comment 36•1 year ago
|
||
| uplift | ||
Updated•1 year ago
|
Comment 38•1 year ago
|
||
Verified fixed on Firefox 134.0.2 (20250120093826) build from Comment 36.
| Assignee | ||
Comment 39•1 year ago
|
||
I filed bug 1943904 to investigate whether we can write a test to prevent further regressions.
Description
•