Bug 1934807 - Consider file: URIs as the same domain for the purpose of frame navigation; r=smaug a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D232451